# FoodieAI

backend/app/services/: meal_planner.ipynb
backend/app/services/recipes_model/: .env.example  .gitignore  README.md  build_faiss_index.py  convert_to_rag_jsonl.py  pyproject.toml  requirements.txt  search_faiss_index.py
foodie_ai/: FEATURES.md  QUICKSTART.md  README.md  pubspec.yaml  run_app.sh  text.text
foodie_ai/android/app/: build.gradle.kts
foodie_ai/android/app/src/main/: AndroidManifest.xml
foodie_ai/android/app/src/main/kotlin/com/example/foodie_ai/: MainActivity.kt
foodie_ai/assets/images/: README.md
foodie_ai/ios/Runner/: Info.plist
foodie_ai/ios/Runner.xcodeproj/: project.pbxproj
foodie_ai/lib/: main.dart
foodie_ai/lib/models/: meal.dart  user_profile.dart
foodie_ai/lib/screens/: activity_level_screen.dart  age_height_weight_screen.dart  calculating_screen.dart  dietary_preference_screen.dart  gender_selection_screen.dart  meal_plan_screen.dart  nutrition_results_screen.dart  welcome_screen.dart
foodie_ai/lib/services/: user_provider.dart
foodie_ai/lib/utils/: constants.dart
foodie_ai/lib/widgets/: custom_button.dart  custom_text_field.dart  selection_card.dart
